SVC-Ingress-Traefik/01a-SVC-traefik-web_UI.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: traefik-ingress
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: web
    port: 80
    targetPort: 8080
