SVC-Ingress-Traefik/02a-ingress-traefik-web-ui.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: traefik-ingress
spec:
  rules:
  - host: traefik-ui.com
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-web-ui
          servicePort: web
